# swirlai-ai-engineering-bootcamp-03-with-memory

./: .gitignore  README.md  docker-compose.yml  init-db.sh  pyproject.toml
notebooks/: 04-hybrid-search.ipynb
src/api/: main.py
src/api/api/: endpoints.py  middleware.py  models.py
src/api/core/: config.py
src/api/rag/: agent.py  common.py  graph.py  retrieval.py  tools.py
src/api/rag/prompts/: rag_generation.yaml  simple_prompt.txt
src/api/rag/utils/: __init__.py  utils.py
src/chatbot_ui/: streamlit_app.py  streamlit_app_simple.py
